--- a/WebApi.csproj
+++ b/WebApi.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Lamar" Version="14.0.1" />
+        <PackageReference Include="Lamar.Microsoft.DependencyInjection" Version="14.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
