Fix Api & Update Styles

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,24 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ReverseProxy": {
+    "Routes": {
+      "spaDevRoute": {
+        "ClusterId": "spaDevCluster",
+        "Match": {
+          "Path": "{**catch-all}"
+        }
+      }
+    },
+    "Clusters": {
+      "spaDevCluster": {
+        "Destinations": {
+          "spaDevServer": {
+            "Address": "http://localhost:5173"
+          }
+        }
+      }
+    }
   }
 }
