--- a/WebApi.csproj
+++ b/WebApi.csproj
@@ -12,6 +12,7 @@
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+        <PackageReference Include="Yarp.ReverseProxy" Version="2.3.0-preview.1.25106.2" />
     </ItemGroup>
 
 </Project>
