--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,17 +19,31 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 9.0.x
+    
         
     - name: Restore dependencies
       run: dotnet restore
       
     - name: Build Backend
       run: dotnet build --no-restore
+
+
+    - name: Use Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: 22
       
+    - name: Install pnpm
+      uses: pnpm/action-setup@v4
+      with:
+        version: 10
+        run_install: |
+          - cwd: 'WebApp'
+
     - name: Restore Frontend
       working-directory: 'WebApp'
-      run: npm ci 
+      run: pnpm i 
       
     - name: Build Frontend
       working-directory: 'WebApp'
-      run: npm run build
+      run: pnpm run build
